--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -21,6 +21,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets{
+        main.java.srcDirs += 'src/main/kotlin'
+    }
 }
 
 dependencies {
